# openfx

./: .gitignore  .travis.yml  CMakeLists.txt
Documentation/sources/Guide/Code/Example1/: basics.cpp
Documentation/sources/Guide/Code/Example3/: gain.cpp
Documentation/sources/Guide/Code/Example4/: saturation.cpp
Documentation/sources/Guide/Code/Example5/: circle.cpp
Examples/: Makefile.master
Examples/Basic/: basic.cpp
Examples/Cuda/: Makefile
Examples/DepthConverter/: depthConverter.cpp
Examples/Examples.xcodeproj/: project.pbxproj
Examples/OpenCL/: Makefile
Examples/OpenGL/: opengl.cpp
Examples/Rectangle/: rectangle.cpp
Examples/Test/: testProperties.cpp
Examples/include/: ofxUtilities.H  osxDeploy.sh
Guide/Code/Example2/: invert.cpp
HostSupport/: HostSupport.sln  HostSupport.vcproj  Makefile
HostSupport/HostSupport.xcodeproj/: project.pbxproj
HostSupport/examples/: Makefile  hostDemo.cpp
HostSupport/expat-2.2.1/: CMake.README.rej  CMakeLists.txt.rej
HostSupport/expat-2.2.1/bcb5/: setup.bat.rej
HostSupport/include/: ofxhBinary.h  ofxhImageEffect.h  ofxhImageEffectAPI.h  ofxhMemory.h  ofxhPluginCache.h  ofxhPropertySuite.h  ofxhUtilities.h
HostSupport/src/: ofxhBinary.cpp  ofxhClip.cpp  ofxhImageEffect.cpp  ofxhImageEffectAPI.cpp  ofxhInteract.cpp  ofxhMemory.cpp  ofxhParam.cpp  ofxhPluginCache.cpp  ofxhPropertySuite.cpp
Support/: CMakeLists.txt
Support/Plugins/: Makefile.master
Support/Plugins/Basic/: basic.cpp
Support/Plugins/Field/: field.cpp
Support/Plugins/Generator/: noise.cpp
Support/Plugins/Invert/: invert.cpp
Support/Plugins/MultiBundle/: multibundle1.cpp  multibundle2.cpp
Support/Plugins/MultiplyGPU/: Makefile  MultiplyGPU.cpp
Support/Plugins/Retimer/: retimer.cpp
Support/Plugins/Tester/: Tester.cpp
Support/Plugins/Transition/: crossFade.cpp
Support/Plugins/include/: ofxsImageBlender.H  ofxsProcessing.H
Support/Support.xcodeproj/: project.pbxproj
Support/include/: ofxsCore.h  ofxsHWNDInteract.h  ofxsImageEffect.h  ofxsInteract.h  ofxsParam.h  osxDeploy.sh
cmake/: OpenFX.cmake
include/: ofxCore.h  ofxImageEffect.h  ofxNatron.h  ofxParam.h  ofxProperty.h
include/nuke/: fnOfxExtensions.h
